[tool.poetry]
name = "python-test"
version = "0.1.0"
description = ""
authors = ["kustikov <pasha_k1987@mail.ru>"]
readme = "README.md"
packages = [{include = "python_test"}]

[tool.poetry.dependencies]
python = "^3.8"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
